[package]
name = "rust_client_adapter"
version = "0.2.0"
edition = "2021"


[dependencies]
bitcoincore-rpc = "0.19.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
# axum = "0.7.5"
# hyper = { version = "1", features = ["full"] }
# http = "1.0"
env_logger = "0.11.3"
dotenv = "0.15.0"
log = "0.4.21"
