[package]
name = "rust_client_adapter"
version = "0.2.0"
edition = "2021"


[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
thiserror = "1.0"
bitcoincore-rpc = "0.19.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
axum = { version = "0.7", features = ["tokio", "http1"]}
hyper = { version = "1", features = ["full"] }
env_logger = "0.11.3"
dotenv = "0.15.0"
log = "0.4.21"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
http = "1.0"
chrono = "0.4"



